force-app/force-app/main/default/objects/Form_Submission_Answer__c/fields/Answer_Number__c.field-meta.xml
<CustomField>
    <fullName>Answer_Number__c</fullName>
    <description>If the answer was in the form of a number.</description>
    <inlineHelpText>If the answer was in the form of a number.</inlineHelpText>
    <label>Answer Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>