force-app/force-app/main/default/objects/Form_Submission_Answer__c/fields/Answer_Text_Long__c.field-meta.xml
<CustomField>
    <fullName>Answer_Text_Long__c</fullName>
    <description>If the answer was in the form of long text.</description>
    <inlineHelpText>If the answer was in the form of long text.</inlineHelpText>
    <label>Answer Text Long</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>