force-app/force-app/main/default/objects/Form_Submission_Answer__c/fields/Form_Big_List_Option__c.field-meta.xml
<CustomField>
    <fullName>Form_Big_List_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related big list option if this record was from a big list submission.</description>
    <inlineHelpText>The related big list option if this record was from a big list submission.</inlineHelpText>
    <label>Form Big List Option</label>
    <referenceTo>Form_Big_List_Option__c</referenceTo>
    <relationshipLabel>Form Submission Answers</relationshipLabel>
    <relationshipName>Form_Submission_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>