force-app/force-app/main/default/objects/Form_Submission_Answer__c/fields/Form_Element_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Element_Type__c</fullName>
    <description>The type of question that was asked as part of this Form Submission Answer.</description>
    <formula>TEXT(Form_Element__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The type of question that was asked as part of this Form Submission Answer.</inlineHelpText>
    <label>Form Element Type</label>
    <type>Text</type>
</CustomField>