force-app/force-app/main/default/objects/Form_Submission_Answer__c/fields/Form_Submission__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The originating Form Submission.</description>
    <inlineHelpText>The originating Form Submission.</inlineHelpText>
    <label>Form Submission</label>
    <referenceTo>Form_Submission__c</referenceTo>
    <relationshipLabel>Form Submission Answers</relationshipLabel>
    <relationshipName>Form_Submission_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>