force-app/force-app/main/default/objects/Form_Submission_Answer__c/fields/Mapping_Error__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Error__c</fullName>
    <description>If there were any errors writing the value of the answer to the target object and field.</description>
    <inlineHelpText>If there were any errors writing the value of the answer to the target object and field.</inlineHelpText>
    <label>Mapping Error</label>
    <type>TextArea</type>
</CustomField>