force-app/force-app/main/default/objects/Form_Submission_Answer__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>The question of the related Form Element.</description>
    <inlineHelpText>The question of the related Form Element.</inlineHelpText>
    <label>Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>